# PrimeKG-2.0

./: auto_datasets.ipynb  pyproject.toml
OLD/datasets/feature_extraction/drug/drug_bank/: parsexml_drugbank.ipynb
OLD/datasets/processing_scripts/: bgee.py  drugbank_drug_protein.py  hpoa.py  mondo_obo_parser.py  umls.py
datasets/feature_extraction/drug/drug_bank/: Parsed_feature.ipynb
datasets/processing_scripts/: ctd.py  drugbank_drug_drug.py  map_umls_mondo.py  mondo.py  reactome.py
src/primekg/: build_graph.py
