[project]
name = "primekg"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Local dependencies
  "package_1",
  "package_2",
  # External dependencies
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
package_1 = { workspace = true }
package_2 = { workspace = true }

[project.scripts]
build-graph = "primekg.build_graph:main"

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
